# CCIPyUtils

./: .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev_requirements.txt  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test-base.yml  test_omero.yml  test_utils.yml
ccipy/: README.md  pyproject.toml
ccipy-atlas/: pyproject.toml
ccipy-atlas/src/ccipy/atlas/: CCIAtlasDomModel.py  CCISessionFilesModel.py  __init__.py  cci_atlas_dom_model.py  cci_session_files_model.py
ccipy-extra/: README.md  pyproject.toml
ccipy-extra/src/ccipy/extra/: CCIArgParseUtils.py  __init__.py
ccipy-extra/tests/: test_greet.py
ccipy-omero/: README.md  pyproject.toml
ccipy-omero/src/ccipy/omero/: CCIOmeroConnection.py  __init__.py
ccipy-omero/tests/: test_CCIOmeroConnection.py  test_connect.py
ccipy-stardist-utils/: pyproject.toml
ccipy-stardist-utils/src/ccipy/stardist_utils/: CCIStarDistWrapper.py  CCIStardistUtils.py
ccipy-stardist-utils/tests/: test_slugify.py
ccipy-utils/: pyproject.toml
ccipy-utils/src/ccipy/img_utils/: maps_to_ome_zarr.py
ccipy-utils/src/ccipy/utils/: CCILogger.py  __init__.py  string_utils.py
ccipy-utils/tests/utils/: test_string_utils.py
ccipy-yolo-utils/: README.md  pyproject.toml
ccipy-yolo-utils/src/ccipy/yolo_utils/: CCIYoloWrapper.py  __init__.py
docs/: index.md  installation.md  usage.md
src/CCIPyUtils/: CCIOmeroConnection.py  __init__.py  cli.py
tests/: __init__.py
