[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccipy-extra"
version = "0.1.0"
description = "Optional extras under the ccipy namespace"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]
license = {text = "MIT"}
dependencies = ["pandas>=2.2", "matplotlib>=3.8"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ccipy.extra*"]
