[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccipy-omero"
version = "0.1.0"
description = "OMERO helpers under the ccipy namespace"
readme = "README.md"
requires-python = "==3.9"
authors = [{name = "You"}]
license = {text = "MIT"}
dependencies = [
            "requests>=2.31",
            "typer",
            "https://github.com/glencoesoftware/zeroc-ice-py-rhel9-x86_64/releases/download/20230830/zeroc_ice-3.6.5-cp39-cp39-linux_x86_64.whl; platform_machine=='x86_64' and sys_platform=='linux' and python_version=='3.9'",
            "https://github.com/glencoesoftware/zeroc-ice-py-win-x86_64/releases/download/20240325/zeroc_ice-3.6.5-cp39-cp39-win_amd64.whl ; platform_system=='Windows' and platform_machine=='AMD64' and python_version=='3.9'",
            "https://github.com/glencoesoftware/zeroc-ice-py-macos-x86_64/releases/download/20231130/zeroc_ice-3.6.5-cp39-cp39-macosx_11_0_x86_64.whl ; sys_platform=='darwin' and platform_machine=='x86_64' and python_version=='3.9'",
            "zeroc-ice==3.6.5 ; not (platform_machine=='x86_64')",  #fallback for other architectures
            "omero-py==5.19.6"

            ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ccipy.omero*"]
