[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccipy-omero"
version = "0.1.0"
description = "OMERO helpers under the ccipy namespace"
readme = "README.md"
requires-python = "==3.12.*"
authors = [{name = "Anders Folkesson", email = "anders.folkesson@gu.se"}]
license = {text = "MIT"}
dependencies = [
            'requests>=2.31',
            'typer',
            'zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp312-cp312-manylinux_2_28_x86_64.whl ; platform_system == "Linux" and platform_machine == "x86_64" and python_version == "3.12"',
            'zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp312-cp312-win_amd64_2_28_x86_64.whl ; platform_system == "Windows" and platform_machine == "AMD64" and python_version =="3.12"',
            'zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp312-cp312-macosx_11_0_x86_64.whl ; platform_system == "Darwin" and platform_machine == "x86_64" and python_version == "3.12"',
            'zeroc-ice==3.6.5 ; platform_machine != "x86_64"',
            'omero-py==5.21.2'
            ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ccipy.omero*"]
