[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccipy-stardist-utils"
version = "0.1.0"
description = "Utilities under the ccipy namespace"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["ccipy.stardist_utils*"]
