[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccipy-utils"
version = "0.1.0"
description = "Utilities under the ccipy namespace"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Anders Folkesson", email = "anders.folkesson@gu.se"}]
license = {text = "MIT"}
dependencies = [
    "requests>=2.31",
    "dask",
    "numpy >=2.0.0",
    "pandas >=2.0.0",
    "ome.zarr >=0.12.2",
    "zarr >=3.1.3",
    "xmltodict >=1.0.2",
    "scikit-image >=0.25.2",
    "imagecodecs >=2025.8.2",
    ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ccipy.utils.*", "ccipy.img_utils.*"]
namespaces = true
